--- a/Layouts/AnimaçãoDado.uistate.xml
+++ b/Layouts/AnimaçãoDado.uistate.xml
@@ -5,10 +5,10 @@ It is entirely optional and the project will load without it.  If you are placin
 you probably do not want to add any .uistate.xml files to the repository.-->
     <camera>
         <position-x>468.303</position-x>
-        <position-y>366.778</position-y>
+        <position-y>657.935</position-y>
         <position-z>133.1</position-z>
         <lookat-x>468.303</lookat-x>
-        <lookat-y>366.778</lookat-y>
+        <lookat-y>657.935</lookat-y>
         <lookat-z>0</lookat-z>
     </camera>
     <snap-to-grid>0</snap-to-grid>
@@ -18,8 +18,10 @@ you probably do not want to add any .uistate.xml files to the repository.-->
     <show-collision-polys>0</show-collision-polys>
     <translucent-inactive-layers>0</translucent-inactive-layers>
     <properties>
+        <property expanded="1" name="Layout properties" />
         <property expanded="0" name="Layout Size" />
         <property expanded="0" name="Margins" />
+        <property expanded="1" name="Effects" />
     </properties>
     <active-layer name="Fundo" />
     <layers>
