--- a/Layouts/Pergunta2.xml
+++ b/Layouts/Pergunta2.xml
@@ -197,7 +197,7 @@
                         <width>478</width>
                         <height>93.160003662</height>
                         <depth>0</depth>
-                        <hotspotX>0.499286741</hotspotX>
+                        <hotspotX>0.499288768</hotspotX>
                         <hotspotY>0.529411793</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
@@ -367,7 +367,7 @@
                                 <active-on-start>No</active-on-start>
                                 <tweened-property>Position</tweened-property>
                                 <function>EaseInOutQuint</function>
-                                <target>-2, 490</target>
+                                <target>-2, 645</target>
                                 <target-mode>Absolute</target-mode>
                                 <duration>3</duration>
                                 <enforce-mode>Enforce</enforce-mode>
@@ -377,15 +377,15 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>-308</x>
-                        <y>456</y>
+                        <x>-302</x>
+                        <y>671</y>
                         <z>0</z>
-                        <width>97.630020142</width>
-                        <height>221.857971191</height>
+                        <width>134.524642944</width>
+                        <height>305.698638916</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
                         <hotspotY>0.500705242</hotspotY>
-                        <angle>1.559943438</angle>
+                        <angle>1.566666961</angle>
                         <opacity>1</opacity>
                     </world>
                 </instance>
@@ -402,9 +402,9 @@
                                 <active-on-start>No</active-on-start>
                                 <tweened-property>Position</tweened-property>
                                 <function>EaseInOutQuint</function>
-                                <target>82, 613</target>
+                                <target>160, 581</target>
                                 <target-mode>Absolute</target-mode>
-                                <duration>3</duration>
+                                <duration>2.5</duration>
                                 <enforce-mode>Enforce</enforce-mode>
                             </properties>
                         </behavior-instance>
@@ -412,15 +412,15 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>-220</x>
-                        <y>600</y>
+                        <x>-175</x>
+                        <y>581</y>
                         <z>0</z>
-                        <width>214.913970947</width>
-                        <height>214.057739258</height>
+                        <width>215.770202637</width>
+                        <height>146.415496826</height>
                         <depth>0</depth>
-                        <hotspotX>0.501992047</hotspotX>
-                        <hotspotY>0.5</hotspotY>
-                        <angle>1.575327754</angle>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.730994165</hotspotY>
+                        <angle>0.017588165</angle>
                         <opacity>1</opacity>
                     </world>
                 </instance>
