--- a/Layouts/Pergunta1.xml
+++ b/Layouts/Pergunta1.xml
@@ -356,7 +356,7 @@
             <instances />
             <effects />
         </layer>
-        <layer name="Memes" sid="853048709228499">
+        <layer name="PedroErrou" sid="947110414479567">
             <initially-visible>1</initially-visible>
             <background-color>255,255,255</background-color>
             <transparent>1</transparent>
@@ -407,6 +407,25 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
+            </instances>
+            <effects />
+        </layer>
+        <layer name="Memes" sid="853048709228499">
+            <initially-visible>1</initially-visible>
+            <background-color>255,255,255</background-color>
+            <transparent>1</transparent>
+            <parallax>
+                <x>1</x>
+                <y>1</y>
+            </parallax>
+            <zoom-rate>1</zoom-rate>
+            <opacity>1</opacity>
+            <force-own-texture>0</force-own-texture>
+            <global>0</global>
+            <use-render-cells>0</use-render-cells>
+            <blend-mode>0</blend-mode>
+            <effect-fallback>0</effect-fallback>
+            <instances>
                 <instance type="Vagabundo" uid="47">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
